--- a/docs/helium-tokens/hnt.mdx
+++ b/docs/helium-tokens/hnt.mdx
@@ -52,16 +52,15 @@ HNT halving happens every two years from the genesis block, on the following sch
 In the below issuance schedule, year 1 starts on **August 1, 2019**. The first halving happened on
 approximately day one of the beginning of year three, **August 1, 2021**.
 
-| Year    | HNT at start of year | Target HNT Emission |
-| :------ | :------------------- | :------------------ |
-| 1       | 0                    | 60,000,000          |
-| 2       | 60,000,000           | 60,000,000          |
-| 3       | 120,000,000          | 30,000,000          |
-| 4**\*** | 150,000,000          | 30,000,000          |
+| Year | HNT at Year Start | Target HNT Emission |
+| :--- | :---------------- | :------------------ |
+| 1    | 0                 | 60,000,000          |
+| 2    | 60,000,000        | 60,000,000          |
+| 3    | 120,000,000       | 30,000,000          |
+| 4    | 150,000,000       | 30,000,000          |
 
-**\*** Helium migrated to the Solana blockchain in year 4 of the network. Full token emissions can
-be viewed in the HNT section of this document:  
-[Token Emissions as of Solana Migration](https://github.com/helium/HIP/blob/main/HIP-solana-parameters/token-emissions-as-of-solana-migration.pdf)
+> Full token emissions can be viewed in the HNT section of this document:
+> [Token Emissions as of Solana Migration](https://github.com/helium/HIP/blob/main/HIP-solana-parameters/token-emissions-as-of-solana-migration.pdf)
 
 ### Data Credits and Burn-and-Mint Economics
 
@@ -71,7 +70,7 @@ Network. One Data Credit will always cost `$0.00001`. Or, `$1.00` will always bu
 Credits. But, as noted above, Data Credits are produced by burning HNT. And the market price of HNT
 will of course fluctuate.
 
-This HNT to DC relationship-is based on a design commonly called a
+This HNT to DC relationship is based on a design commonly called a
 [burn and mint equilibrium](https://multicoin.capital/2018/02/13/new-models-utility-tokens/) and is
 intended to allow for the supply of HNT to respond to network usage trends such that, when
 equilibrium is found, the amount of HNT that exists remains static month on month. (Helium borrowed
