--- a/docs/helium-tokens/iot.mdx
+++ b/docs/helium-tokens/iot.mdx
@@ -1,9 +1,9 @@
 ---
 id: iot-token
-title: Helium IOT Network Token
+title: Helium IoT Network Token
 pagination_label: IOT Token
 sidebar_label: IOT Token
-description: Helium IOT Network Token Documentation
+description: Helium IoT Network Token Documentation
 image: https://docs.helium.com/img/link-image.png
 slug: /helium-tokens/iot
 ---
@@ -13,11 +13,10 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 <img className="docsheader" src={useBaseUrl('/img/blockchain/iot_header.png')} />
 
 IOT is the protocol token of the [Helium IoT Network](/lorawan-on-helium). IOT was introduced to the
-Helium Network with the community proposal
+Helium Network through the community proposal
 [HIP-52](https://github.com/helium/HIP/blob/main/0052-iot-dao.md) and is further defined in
-subsequent HIPs[^1] [^2] [^3] [^4].
-
-The IOT token is mined by LoRaWAN Hotspots through both data transfer as well as Proof of Coverage.
+subsequent HIPs<sup>(</sup>[^1]<sup>,</sup>[^2]<sup>,</sup>[^3]<sup>,</sup>[^4]<sup>)</sup>. The
+first IOT tokens were minted following the Solana migration on April 18, 2023.
 
 [^1]:
     [HIP-70: Scaling the Helium Network](https://github.com/helium/HIP/blob/main/0070-scaling-helium.md)
@@ -29,16 +28,23 @@ The IOT token is mined by LoRaWAN Hotspots through both data transfer as well as
 [^4]:
     [HIP-80: Simplifying DAO Utility Score](https://github.com/helium/HIP/blob/main/0080-simplifying-dao-utility-score.md)
 
-The first IOT tokens were minted following the Solana migration on April 18, 2023.  
+The IOT token is mined by LoRaWAN Hotspots through both data transfer proceeds as well as Proof of
+Coverage.
+
 The mint address for IOT is
 [`iotEVVZLEywoTn1QdwNPddxPWszn3zFhEot3MfL9fns`](https://explorer.solana.com/address/iotEVVZLEywoTn1QdwNPddxPWszn3zFhEot3MfL9fns)
+on the Solana blockchain.
 
-## Treasury
+## Redemption for HNT
 
-The Treasury is funded by activity within epochs. It is your right as a Token Holder to redeem IOT
-for HNT. This redemption will be determined by a redemption ratio that is set algorithmically by the
-Treasury swap contacts. This function is built into the structure of the subDAOs but other Market
-Makers may also support this function.
+Protocol tokens like IOT will always be backed by HNT and will convert to HNT. To enable this, each
+network within the Helium Network is allocated a pool of HNT based on the Network Utility Score. The
+redemption ratio is set algorithmically by the treasury swap contacts based on this Network Utility
+Score.
+
+The [Helium Wallet App](/wallets/helium-wallet-app) serves as the primary platform for exchanging
+IOT to HNT. This transaction can also be performed directly through the Solana blockchain using the
+open source tooling found in the Helium GitHub repositories.
 
 ## Token Allocation
 
@@ -48,15 +54,19 @@ The issuance is scheduled to have halvings every 2 years, aligning with HNT issu
 
 The emission schedule is as follows:
 
-| Year | IOT at the start of the year | IOT minted | % to Proof of Coverage (+ any extra from Data Transfer) | % to Data Transfer (excess to Proof of Coverage) | % to Oracles | Operations Fund | veHNT Stakers |
-| ---- | ---------------------------- | ---------- | ------------------------------------------------------- | ------------------------------------------------ | ------------ | --------------- | ------------- |
-| 1    | 5B                           | 65B        | 30%                                                     | 50%                                              | 7%           | 7%              | 6%            |
-| 2    | 70B                          | 32.5B      | 28.5%                                                   | 51.5%                                            | 7%           | 7%              | 6%            |
-| 3    | 102.5B                       | 32.5B      | 27%                                                     | 53%                                              | 7%           | 7%              | 6%            |
-| 4    | 135B                         | 16.25B     | 25.5%                                                   | 54.5%                                            | 7%           | 7%              | 6%            |
-| 5    | 151.25B                      | 16.25B     | 24%                                                     | 56%                                              | 7%           | 7%              | 6%            |
-| 6    | 167.5B                       | 8.125B     | 22.5%                                                   | 57.5%                                            | 7%           | 7%              | 6%            |
-| 7    | 175.625B                     | 8.125B     | 21%                                                     | 59%                                              | 7%           | 7%              | 6%            |
+| Year | IOT at Year Start | IOT Minted | Proof of Coverage \* | Data Transfer \* | Oracles \*\* | Operations Fund | veHNT Stakes |
+| ---- | ----------------- | ---------- | -------------------- | ---------------- | ------------ | --------------- | ------------ |
+| 1    | 5B                | 65B        | 30%                  | 50%              | 7%           | 7%              | 6%           |
+| 2    | 70B               | 32.5B      | 28.5%                | 51.5%            | 7%           | 7%              | 6%           |
+| 3    | 102.5B            | 32.5B      | 27%                  | 53%              | 7%           | 7%              | 6%           |
+| 4    | 135B              | 16.25B     | 25.5%                | 54.5%            | 7%           | 7%              | 6%           |
+| 5    | 151.25B           | 16.25B     | 24%                  | 56%              | 7%           | 7%              | 6%           |
+| 6    | 167.5B            | 8.125B     | 22.5%                | 57.5%            | 7%           | 7%              | 6%           |
+| 7    | 175.625B          | 8.125B     | 21%                  | 59%              | 7%           | 7%              | 6%           |
 
-Full token emissions can be viewed in the IOT section of this document:  
-[Token Emissions as of Solana Migration](https://github.com/helium/HIP/blob/main/HIP-solana-parameters/token-emissions-as-of-solana-migration.pdf)
+> Full token emissions can be viewed in the IOT section of this document:
+> [Token Emissions as of Solana Migration](https://github.com/helium/HIP/blob/main/HIP-solana-parameters/token-emissions-as-of-solana-migration.pdf)
+
+**\*** Any IOT not rewarded for data transfer is rolled into Proof of Coverage.  
+**\*\*** Oracles are not rewarded until additional oracle operators deploy services. This pool is
+rolled over to Proof of Coverage.
