Improve documentation for CLI wallet migration commands

--- a/docs/solana/migration/wallet-user.mdx
+++ b/docs/solana/migration/wallet-user.mdx
@@ -101,22 +101,28 @@ remain the same.
 :::caution The Helium CLI Wallet Will Be Depreciated
 
 The CLI Wallet will be completely deprecated except for exporting private seed phrases and
-displaying public Solana addresses.
+displaying public Solana addresses. Accordingly, common payment transactions and staking should 
+utilize the Solana CLI Wallet or the Helium Wallet app.
 
 Check out the [Solana Documentation](https://docs.solana.com/wallet-guide/cli) for more information
 on Solana Command Line Wallets.
 
 :::
 
-The CLI Wallet will have its feature set pared down as there are many other Solana-compatible CLI
-Wallets. The existing Helium CLI Wallet will be reduced to the following two functions:
+Starting in Helium CLI Wallet [v1.7.11](https://github.com/helium/helium-wallet-rs/releases/tag/v1.7.11),
+the feature set was updated to include the following three functions: 
 
-1. Export Seed Phrase or private key to import into a Solana CLI Wallet (or the Helium Wallet app)
-2. Display Solana Public Address (for a given set of private keys)
-
-This means common payment transactions and staking should utilize
-[Solana CLI Wallet](https://docs.solana.com/wallet-guide/cli) or the Helium Wallet app.
-
+1. Export raw private key for import into a Solana CLI Wallet or Phantom wallet.
+  - ```helium-wallet export --output seed```
+2. Export raw private key as a password encrypted QR code for import into the Helium Wallet app via 
+the "Add New Account > Import > CLI" QR code reader. Please note that after scanning the QR code
+in the Helium Wallet app, you will need to enter the password provided via the Helium CLI Wallet
+used to encrypt the QR code export. This password may be different tham the one used to execute CLI
+wallet commands.
+- ```helium-wallet export --output qr```
+3. Display Solana Public Address (for a given set of private keys).
+  - ```helium-wallet info```
+  
 ---
 
 ## For Ledger Wallet Users
