--- a/docs/solana/migration/wallet-user.mdx
+++ b/docs/solana/migration/wallet-user.mdx
@@ -114,15 +114,26 @@ updates were made to the `export` and `info` commands to facilitate exporting pr
 and displaying public Solana addresses
 
 1. Export raw Solana-compatible private key for import into a Solana CLI Wallet or Phantom wallet.
-  - ```helium-wallet export --output seed```
+
+  ```
+  helium-wallet export --output seed
+  ```
+
 2. Export raw private key as a password encrypted QR code for import into the Helium Wallet app via 
 the "Add New Account > Import > CLI" QR code reader. Please note that after scanning the QR code
 in the Helium Wallet app, you will need to enter the password provided via the Helium CLI Wallet
 used to encrypt the QR code export. This password may be different than the one used to execute CLI
 wallet commands.
-- ```helium-wallet export --output qr```
+
+  ```
+  helium-wallet export --output qr
+  ```
+
 3. Display Solana Public Address (for a given set of private keys).
-  - ```helium-wallet info```
+
+  ```
+  helium-wallet info
+  ```
 
 ---
 
