--- a/docs/helium-tokens/mobile.mdx
+++ b/docs/helium-tokens/mobile.mdx
@@ -43,7 +43,7 @@ Network Utility Score.
 
 The [Helium Wallet App](/wallets/helium-wallet-app) serves as the primary platform for exchanging
 MOBILE to HNT. This transaction can also be performed directly through the Solana blockchain using
-the open source tooling found in the Helium GitHub repositories.
+the open source tooling found in the [Helium GitHub repositories](https://github.com/helium).
 
 ## Token Allocation
 
