--- a/docs/helium-tokens/iot.mdx
+++ b/docs/helium-tokens/iot.mdx
@@ -44,7 +44,7 @@ Score.
 
 The [Helium Wallet App](/wallets/helium-wallet-app) serves as the primary platform for exchanging
 IOT to HNT. This transaction can also be performed directly through the Solana blockchain using the
-open source tooling found in the Helium GitHub repositories.
+open source tooling found in the [Helium GitHub repositories](https://github.com/helium).
 
 ## Token Allocation
 
