--- a/docs/solana/migration/blockchain-api.mdx
+++ b/docs/solana/migration/blockchain-api.mdx
@@ -17,5 +17,5 @@ API following the migration.
 
 For ongoing access, several organizations are already building new API services based on the
 [Oracle Data](/oracles/oracle-data) available after the migration. These organizations include (but
-not limited to), [Hotspotty](https://hotspotty.net/api/), [HeliumGeek](https://heliumgeek.com),
+not limited to), [Hotspotty](https://hotspotty.net/api/), [HeliumGeek](https://heliumgeek.com/b/helium-offchain-api.html),
 [Relay](https://www.relaydevice.com) and [Watchium](https://watchium.disk91.com).
