--- a/docs/solana/migration/hotspot-operator.mdx
+++ b/docs/solana/migration/hotspot-operator.mdx
@@ -99,13 +99,13 @@ following:
 
 - Witnessed and was a valid witness
 - Beaconed and had valid witnesses
-- Transferred LoRaWAN data and been paid for it
+- Transferred LoRaWAN data and been rewarded for it
 
 A Hotspot is not "Active" if it:
 
 - Has not beaconed with valid witnesses
 - Has not been a valid witness to a beacon
-- Has not passed data and been paid for it
+- Has not passed data and been rewarded for it
 
 :::caution Hotspots on the Denylist
 
