Add instructions to sideload the ledger app

--- a/docs/solana/migration/ledger.mdx
+++ b/docs/solana/migration/ledger.mdx
@@ -7,12 +7,20 @@ description: Ledger Hardware Wallet User Documentation
 slug: /solana/migration/ledger
 ---
 
-:::info Using the Helium Solana Ledger App
+## Installing the Helium-Solana App
 
-More information on installing and using the Solana-compatible Helium app for Ledger Wallets in the
-[Github Repo](https://github.com/helium/app-helium-solana).
+As of now, we are still waiting on Ledger to release our app. Until then, to install you must follow these steps:
 
-:::
+1. Open Ledger Live. 
+2. Go to Settings (top right corner)
+3. Click "Experimental Features"
+4. Enable "Developer Mode"
+5. Change "My ledger provider" to 4
+6. Install the Helium-Solana app as you normally would.
+
+Note that, while using the testing provider, the icon for the app will not appear properly on your ledger.
+
+## Migrating
 
 The following utility will migrate all tokens from the Helium derivation path `44'/904'/n'/0'` to
 the Solana derivation path `44'/501'/n'/0'`. To get started, install the:
