--- a/docs/solana/migration/ledger.mdx
+++ b/docs/solana/migration/ledger.mdx
@@ -18,7 +18,7 @@ As of now, we are still waiting on Ledger to release our app. Until then, to ins
 5. Change "My ledger provider" to 4
 6. Install the Helium-Solana app as you normally would.
 
-Note that, while using the testing provider, the icon for the app will not appear properly on your ledger.
+Note that, while using the testing provider, the icon for the app will not appear properly on your ledger. Additionally, do not install any other apps on the `4` provider as other developer teams use this release channel. 
 
 ## Migrating
 
