--- a/docs/mine-hnt/validators/validators-and-voting-power.mdx
+++ b/docs/mine-hnt/validators/validators-and-voting-power.mdx
@@ -216,8 +216,12 @@ from 0.0684462 to 100.
 > unstake immediately, after six months, my veHNT decays to 0 until my 10 HNT unlocks and is
 > available to me for use in my wallet.
 
-A combination of an amount of HNT locked-up for a specified duration and the assigned veHNT is called a "Position". It is possible to own multiple Positions in your wallet. Actions taken on a Position - like e.g. on the lock-up duration, delegating the veHNT, voting with the veHNT - are all or nothing options. If a Position owner would like to receive rewards from two SubDAOs, then the HNT-veHNT Position would need to be split into two Positions - by transfering some HNT to a send position
-within the same wallet. Then each position could delegate to a different subDAO. Similarly,
+A combination of an amount of HNT locked-up for a specified duration and the assigned veHNT is
+called a "Position". It is possible to own multiple Positions in your wallet. Actions taken on a
+Position - like e.g. on the lock-up duration, delegating the veHNT, voting with the veHNT - are all
+or nothing options. If a Position owner would like to receive rewards from two SubDAOs, then the
+HNT-veHNT Position would need to be split into two Positions - by transfering some HNT to a send
+position within the same wallet. Then each position could delegate to a different subDAO. Similarly,
 wishing to extend the lock-up duration on parts of a Position requires a similar split by transfer.
 
 ### How Can I Obtain veHNT?
@@ -386,10 +390,12 @@ veHNT and veDNTs have no price in the larger crypto markets.
 
 The DAO Utility score is described in [HIP-51](https://github.com/helium/HIP/issues/336)
 
-Every epoch, a fixed amount of HNT is allocated to all subDAOs. Each subDAO receives a share of this fixed amount. The sizes of the shares are determined by the Utility Scores of each subDAO of Helium.
+Every epoch, a fixed amount of HNT is allocated to all subDAOs. Each subDAO receives a share of this
+fixed amount. The sizes of the shares are determined by the Utility Scores of each subDAO of Helium.
 
-The higher the Utility Score of a subDAO is in relation to the Utility Scores of all other subDAOs combined, the higher its share of the total HNT allocated to all subDAOs. As the DAO Utility Scores are calculated each epoch anew, the share of HNT a subDAO receives may change from epoch to epoch. 
-
+The higher the Utility Score of a subDAO is in relation to the Utility Scores of all other subDAOs
+combined, the higher its share of the total HNT allocated to all subDAOs. As the DAO Utility Scores
+are calculated each epoch anew, the share of HNT a subDAO receives may change from epoch to epoch.
 
 Delegating veHNT to IOT or MOBILE increases the `V` value in the
 [HIP-51 DAO Utility Score](https://github.com/helium/HIP/blob/main/0051-helium-dao.md#omni-protocol-poc-incentive-model)
@@ -397,10 +403,10 @@ calculation.
 
 The two other ways the DAO Utility score can be increased are:
 
-1. Increasing the amount of data usage on the subDAO, i.e., the Data Credits burned. This increases the `D`
-   value in the Utility Score.
-2. Increasing the Data Credits used to onboard the number of Hotspots for that subDAO. This increases the `A`
-   value in the Utility Score.
+1. Increasing the amount of data usage on the subDAO, i.e., the Data Credits burned. This increases
+   the `D` value in the Utility Score.
+2. Increasing the Data Credits used to onboard the number of Hotspots for that subDAO. This
+   increases the `A` value in the Utility Score.
 
 ### Will My subDAO Earnings Remain The Same Over The Time Period Lock-Up?
 
