--- a/docs/mine-hnt/validators/validators-and-voting-power.mdx
+++ b/docs/mine-hnt/validators/validators-and-voting-power.mdx
@@ -220,7 +220,7 @@ A combination of an amount of HNT locked-up for a specified duration and the ass
 called a "Position". It is possible to own multiple Positions in your wallet. Actions taken on a
 Position - like e.g. on the lock-up duration, delegating the veHNT, voting with the veHNT - are all
 or nothing options. If a Position owner would like to receive rewards from two SubDAOs, then the
-HNT-veHNT Position would need to be split into two Positions - by transfering some HNT to a send
+HNT-veHNT Position would need to be split into two Positions - by transfering some HNT to a second
 position within the same wallet. Then each position could delegate to a different subDAO. Similarly,
 wishing to extend the lock-up duration on parts of a Position requires a similar split by transfer.
 
