--- a/docs/solana/migration/ledger.mdx
+++ b/docs/solana/migration/ledger.mdx
@@ -7,20 +7,39 @@ description: Ledger Hardware Wallet User Documentation
 slug: /solana/migration/ledger
 ---
 
-:::info Using the Helium Solana Ledger App
+## Installing the Helium-Solana App
 
-More information on installing and using the Solana-compatible Helium app for Ledger Wallets in the
-[Github Repo](https://github.com/helium/app-helium-solana).
+As of now, we are still waiting on Ledger to release our app. Until then, to install you must follow
+these steps:
+
+1. Open Ledger Live.
+2. Go to Settings (top right corner)
+6. Install the Helium-Solana app as you normally would.
+3. Click `Experimental Features`
+4. Enable `Developer Mode`
+5. Change `My ledger provider` to `4`
+
+:::tip Ledger Icon and Providers
+
+While using the testing provider, the icon for the app will not appear properly on your Ledger.
+
+Do not install any other apps on the `4` provider as other developer teams use this release channel.
 
 :::
 
+---
+
+## Migrating
+
 The following utility will migrate all tokens from the Helium derivation path `44'/904'/n'/0'` to
-the Solana derivation path `44'/501'/n'/0'`. To get started, install the:
+the Solana derivation path `44'/501'/n'/0'`.
 
 Ledger users will need to update their Helium Ledger App to a version that's pending release. This
 upcoming version will use the Solana private key derivation path that moves all your tokens and
 balances over to Solana. You may need to uninstall any Solana Ledger Apps during the Wallet
 migration process.
+
+---
 
 ## Migration Tool
 
