--- a/docs/solana/migration/governance.mdx
+++ b/docs/solana/migration/governance.mdx
@@ -24,4 +24,4 @@ wallet, and vote.
 
 ## Governance Changes
 
-The major change with the Solana governance is that more of the Helium network can be governed by the DAO. Everything from Program (smart contract) changes to approving makers can now be controlled by the DAO.
+The major change with Solana governance is that more of the Helium network can be governed by the DAO. Everything from Program (smart contract) changes to approving makers can now be controlled by the DAO.
