--- a/docs/solana/migration/network-user.mdx
+++ b/docs/solana/migration/network-user.mdx
@@ -11,6 +11,10 @@ slug: /solana/migration/network-user
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
 As a LoRaWAN Network user, you will not need to do anything during the migration. The network should
-continue to function.
+continue to function. Data transfer should be unaffected during the Solana Migration.
+
+During the Solana Migration, users may still purchase Data Credits with a credit card on Console. However, users will be unable to acquire DC through a direct HNT burn on Console. If you need additional Data Credits and prefer to burn HNT, please consider doing so before the 4/18 Solana Migration.
+
+Core developers will actively monitor Network performance to ensure that systems stay operational. If you believe that data transfer have been negatively impacted, please post the issue in the #console channel in the [Helium Discord](https://discord.gg/helium). 
 
 <!-- TODO: Joey, maybe talk about Chirpstack and such? -->
