--- a/docs/helium-tokens/mobile.mdx
+++ b/docs/helium-tokens/mobile.mdx
@@ -51,6 +51,7 @@ MOBILE follows a similar minting schedule to HNT, however at a max supply of 250
 50B MOBILE were pre-mined at the launch of the network and distributed to the network operations
 fund administered by the Helium Foundation. A fraction of this allocation was distributed over the
 course of the genesis period to live Mobile Network Hotspots.
+Year 1 for MOBILE started 1st August 2022.
 
 The issuance is scheduled to have halvings every 2 years, aligning with HNT issuance halvings.
 
