docs for realms and governance
started this

--- a/docs/community-governance/community-governance.mdx
+++ b/docs/community-governance/community-governance.mdx
@@ -24,6 +24,15 @@ Network. It is also the primary venue to get support for using the Network.
 
 - [Join the Helium Community Discord](https://discord.gg/helium)
 
+## Realms
+
+[Realms] (realms.today) is a Solana native tool for DAO infrastructure. As part of the migration to the Solana Blockchain, the Helium Community adopted Realms as it's tool for staking, delegating and on-chain voting.
+This tool replaces Helium Vote.
+
+Read [this page](XXX) to learn how to navigate Realms.
+
+- [Join the Helium DAO, IOT DAO or MOBILE DAO on Realms](realms.dao)
+
 ## Helium Improvement Proposals
 
 The Helium Community uses a governance mechanism called **Helium Improvement Proposals** (known as
